<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskSucker</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New Task</string>
    <string name="action_delete_all">Delete All Done</string>
    <string name="action_save_new">Save</string>
    <string name="action_save_edit">Save</string>
    <string name="title_activity_new_task">Add New Task</string>
    <string name="new_task_title_caption">Task Title</string>
    <string name="new_task_set_date_caption">Deadline</string>
    <string name="new_task_priority_caption">Priority</string>
    <string name="new_task_set_date">Set date</string>
    <string name="new_task_set_time">Set time</string>
    <string name="new_task_priority">High Priority</string>
    <string name="new_task_add">Add New Task</string>
    <string name="new_task_record_video">Record Video</string>
    <string name="new_task_record_video_caption">Video</string>
    <string name="new_task_no_video">No Video</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="context_set_as_done">Set as done</string>
    <string name="context_set_as_undone">Set as undone</string>
    <string name="context_edit">Edit</string>
    <string name="context_delete">Delete</string>
    <string name="no_deadline">No deadline</string>

</resources>
