<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditTaskActivity" >

    <TextView
        android:id="@+id/edit_task_title_caption" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_title_caption"
        android:textColor="#656565"
        android:textStyle="bold"
        android:textAllCaps="true" />
    
    <EditText
	    android:id="@+id/edit_task_title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:inputType="text"
	    android:layout_below="@id/edit_task_title_caption" />
    
    <TextView
        android:id="@+id/edit_task_set_date_caption" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_set_date_caption"
        android:textColor="#656565"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_below="@id/edit_task_title"
        android:layout_marginTop="15dip" />
    
    <Button
        android:id="@+id/edit_task_set_date" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/new_task_set_date" 
	    android:onClick="showDatePickerDialog" 
	    android:layout_below="@id/edit_task_set_date_caption"
	    android:layout_centerHorizontal="true" />
    
    <Button
        android:id="@+id/edit_task_set_time" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/new_task_set_time" 
	    android:onClick="showTimePickerDialog" 
	    android:layout_below="@id/edit_task_set_date"
	    android:layout_centerHorizontal="true" />
    
    <TextView
        android:id="@+id/new_task_priority_caption" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_priority_caption"
        android:textColor="#656565"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_below="@id/edit_task_set_time"
        android:layout_marginTop="15dip" />
    
    <CheckBox
        android:id="@+id/new_task_priority" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_priority"
        android:layout_below="@id/new_task_priority_caption"
        android:textSize="20sp" />
    

</RelativeLayout>
