<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewTaskActivity" >

    <TextView
        android:id="@+id/new_task_title_caption" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_title_caption"
        android:textColor="#656565"
        android:textStyle="bold"
        android:textAllCaps="true" />
    
    <EditText
	    android:id="@+id/new_task_title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:inputType="text"
	    android:layout_below="@id/new_task_title_caption" />
    
    <TextView
        android:id="@+id/new_task_set_date_caption" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_set_date_caption"
        android:textColor="#656565"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_below="@id/new_task_title"
        android:layout_marginTop="15dip" />
    
	<LinearLayout 
	    android:id="@+id/layout_buttons_datetime" 
	    android:layout_height="wrap_content" 
	    android:layout_width="fill_parent"
	    android:layout_below="@id/new_task_set_date_caption" >
	    
	    <Button
	        android:id="@+id/new_task_set_date" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:text="@string/new_task_set_date" 
		    android:onClick="showDatePickerDialog" 
		    android:layout_weight="1"
		/>
	    
	    <Button
	        android:id="@+id/new_task_set_time" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:text="@string/new_task_set_time" 
		    android:onClick="showTimePickerDialog" 
		    android:layout_weight="1"
		/>

	</LinearLayout>
    
    
    <CheckBox
        android:id="@+id/new_task_priority" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_priority"
        android:layout_below="@id/layout_buttons_datetime"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/new_task_record_video_caption" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_record_video_caption"
        android:textColor="#656565"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_below="@id/new_task_priority"
        android:layout_marginTop="15dip" />
    
    
    <VideoView 
         android:id="@+id/new_task_videoview" 
         android:layout_height="280dp"
         android:layout_width="160dp" 
         android:visibility="invisible"
         android:layout_below="@id/new_task_record_video_caption" />
    
    <TextView 
         android:id="@+id/new_task_novideo" 
         android:layout_height="280dp"
         android:layout_width="160dp" 
         android:gravity="center"
         android:text="@string/new_task_no_video"
         android:textColor="#656565"
         android:textStyle="bold"
         android:textAllCaps="true"
         android:background="#b6b6b6"
         android:layout_below="@id/new_task_record_video_caption" />
    
    <RelativeLayout  
        android:layout_height="280dp"
        android:layout_width="160dp" 
	    android:layout_below="@id/new_task_record_video_caption">
	    
	    <ImageView
	        android:id="@+id/new_task_playvideo"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content" 
	        android:layout_centerInParent="true"
	        android:visibility="invisible"
	        android:src="@drawable/ic_action_play_over_video" />
	    
    </RelativeLayout>
    
    <LinearLayout 
	    android:id="@+id/layout_buttons_video" 
	    android:layout_height="wrap_content" 
	    android:layout_width="160dp"
	    android:layout_below="@id/new_task_videoview" >
	    
	    <ImageButton
	        android:id="@+id/new_task_record_video2" 
	        android:onClick="showVideoRecorder" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:src="@drawable/ic_action_video2"/>
	    
	    <ImageButton
	        android:id="@+id/new_task_discard_video" 
	        android:onClick="discardVideo" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:src="@drawable/ic_action_discard_video2" />
    
	</LinearLayout>

</RelativeLayout>
